improved API handling and added more features

--- a/API tests.ipynb
+++ b/API tests.ipynb
@@ -10,6 +10,7 @@
     "import json\n",
     "import pandas as pd\n",
     "from pandas import DataFrame\n",
+    "from datetime import datetime, timedelta\n",
     "import pgeocode\n",
     "import folium\n",
     "import time\n",
@@ -32,12 +33,20 @@
     "class CHouse:\n",
     "    api_calls = 0\n",
     "    total_api_calls = 0\n",
+    "    current_time = datetime.now()\n",
     "    \n",
     "    def __init__(self, api_key):\n",
     "        self.api_key = api_key        \n",
     "        \n",
     "    @classmethod\n",
     "    def api_guard(cls):\n",
+    "        call_time = datetime.now()\n",
+    "        buffer_delta = timedelta(seconds=420)\n",
+    "        \n",
+    "        if call_time > (CHouse.current_time + buffer_delta):\n",
+    "            CHouse.api_calls = 0\n",
+    "            CHouse.current_time = datetime.now()\n",
+    "            \n",
     "        if CHouse.api_calls >= 599:\n",
     "            print(\"API cool down 5 min\")\n",
     "            time.sleep(310)\n",
@@ -46,6 +55,8 @@
     "        else:\n",
     "            CHouse.api_calls += 1\n",
     "            CHouse.total_api_calls += 1\n",
+    "            \n",
+    "        CHouse.current_time = datetime.now()\n",
     "            \n",
     "    def _enrich_geo_loc(self, df: DataFrame) -> DataFrame:\n",
     "        nomi = pgeocode.Nominatim('gb')\n",
@@ -129,14 +140,27 @@
     "                result_residency.append('NaN')\n",
     "                \n",
     "        result_year_median = []\n",
+    "        result_year_min = []\n",
     "        \n",
     "        for i in range(len(result_year)):\n",
     "            result_year_median.append(statistics.median(result_year[i]))\n",
+    "            result_year_min.append(min(result_year[i]))\n",
     "            \n",
     "        df['Significant Person Birth Year/s'] = result_year\n",
     "        df['Median Person Birth Year'] = result_year_median\n",
+    "        df['Oldest Person Birth Year'] = result_year_min\n",
     "        df['Significant Person Name/s'] = result_name\n",
     "        df['Significant Person Residency'] = result_residency\n",
+    "        \n",
+    "    def retrieve_filings(self, company_number: str) -> dict:\n",
+    "        url_filings = \"https://api.company-information.service.gov.uk/company/{}/filing-history?items_per_page=200\"\n",
+    "        \n",
+    "        CHouse.api_guard()\n",
+    "        response = requests.get(url_filings.format(company_number),auth=(self.api_key,''))\n",
+    "        json_search_result = response.text\n",
+    "        search_result = json.JSONDecoder().decode(json_search_result)\n",
+    "        \n",
+    "        return search_result\n",
     "    \n",
     "    def export_excel(self, df:DataFrame) -> None:\n",
     "        df.to_excel(\"CompaniesExport.xlsx\")"
@@ -157,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = w.filter_sic(62011, 'active', 8800)"
+    "table = w.filter_sic(62011, 'active', 8700)"
    ]
   },
   {
@@ -198,85 +222,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Filing History"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://api.company-information.service.gov.uk/company/{}/filing-history?items_per_page=200\"\n",
-    "query = '03382310'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.get(url.format(query),auth=(api_key,''))\n",
-    "json_search_result = response.text\n",
-    "search_result = json.JSONDecoder().decode(json_search_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "search_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.get(url.format(query),auth=(api_key,''))\n",
-    "json_search_result = response.text\n",
-    "search_result = json.JSONDecoder().decode(json_search_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "search_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "search_result['items']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for filings in search_result['items']:\n",
-    "    print(filings['date'])"
+    "w.retrieve_filings(\"08403673\")"
    ]
   }
  ],
