improved testing jupyter notebook layout

--- a/API prod.ipynb
+++ b/API prod.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = CHouse()"
+    "w = CHouse(\"<Your API key>\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w.create_map(table)"
+    "w.create_map(table, show = True)"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = w.retrieve_filings(\"08403673\")"
+    "test = w.retrieve_filings(\"<Company ID>\")"
    ]
   },
   {
