fixed geo-location override problem, better ui layout

--- a/API prod.ipynb
+++ b/API prod.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = w.filter_sic(62011, 'active', 8000)"
+    "table = w.filter_sic(sic_code = 62011, status = 'active', start_index = 8300)"
    ]
   },
   {
